# FoC-Project

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh
data/: README.md  client-config.xml  server-config.xml  users.xml
data/client-keys/: alice.pem  bob.pem  charlie.pem  david.pem  rootca.com.crt
data/server-keys/: README.md  alice.pub  bob.pub  charlie.pub  david.pub  puffotrillionario.pem  rootCA.pem  rootca.com.srl  s3.puffotrillionario.com.crt  s3.puffotrillionario.com.csr
data/tmp/2/: ciaao.txt
src/: client.cc  server.cc  util.h
src/ALP/: ALPHeader.h  AbstractController.h  ClientInfo.cc  ClientInfo.h  object_io.h  xml.h
src/Crypto/: Encryptor.hh  Makefile  api.hh  certs.hh  crypto.hh  dhe.hh  error.hh  hash.hh  pubkey.hh  random.hh  simmetric.hh  test.cc
src/S3L/: AuthenticatedEncryptedMessage.h  AuthenticatedMessage.h  BadConnectionMessage.cc  BadConnectionMessage.h  ClientFinished.cc  ClientFinished.h  ClientHelloMessage.cc  ClientHelloMessage.h  DataMessage.cc  DataMessage.h  IOChannel.h  LocalChannel.h  NetworkBuffer.h  S3LHeader.cc  S3LHeader.h  S3LMessage.h  SecureDataChannel.cc  SecureDataChannel.h  ServerHelloMessage.cc  ServerHelloMessage.h  ShutdownMessage.cc  ShutdownMessage.h  SizeCalculator.h  SocketChannel.cc  SocketChannel.h  constants.h  main.cpp  utility.h
